%% title: 接收文件消息(面板驾驶对象)
%%{init: {
  'theme': 'base',
  'htmlLabels': false,
  'state': { 'htmlLabels': false },
  'flowchart': { 'htmlLabels': false },
  'themeVariables': {
    'primaryColor': '#ECECFF',
    'primaryBorderColor': '#D5D5FF',
    'primaryTextColor': '#000000',
    'lineColor': '#757575',
    'textColor': '#212121',
    'edgeLabelBackground': 'transparent',
    'noteBkgColor': '#FFF6B8',
    'noteBorderColor': '#E4C800',
    'noteTextColor': '#5C5100',
    'tertiaryColor': '#f5f5f5',
    'background': '#FFFFFF'
  }
}}%%
stateDiagram-v2
    [*] --> pending : 收到 prepare-upload(需确认)
    [*] --> accepted : 自动接收命中(size ≤ 阈值)
    pending --> accepted : 用户点接收
    pending --> rejected : 用户点拒绝
    pending --> expired : 确认超时 T_ACCEPT / 重启恢复
    accepted --> accepted : 传输进度(节流推送,不改状态)
    accepted --> done : 落盘完成(填 filePath)
    accepted --> failed : 落盘失败(errorReason)
    done --> [*]
    failed --> [*]
    rejected --> [*]
    expired --> [*]
    note right of pending
        终态后一切事件静默忽略
        (原型将忽略外显为提示)
    end note
